# cliwiki

./: .gitignore  CODE_OF_CONDUCT.md  README.md  README_kk.md  README_ru.md  makefile  meson.build
src/: colors.cpp  colors.h  main.cpp  ui.cpp  ui.h  wikipedia.cpp  wikipedia.h
